# hex-Editor-

./: .gitignore  CMakeLists.txt  README.md  Resours.qrc  codeeditor.cpp  codeeditor.h  highlighter.cpp  highlighter.h  home.cpp  home.h  main.cpp  menubar.cpp  menubar.h  menuhandler.cpp  textanalyzer.cpp  textanalyzer.h  textconverter.cpp  textconverter.h
